glx/testdata/invalid/comprehensive-broken-references/media/media-photo.glx
media:
  media-photo:
    uri: "media/photos/photo.jpg"
    mime_type: "image/jpeg"
    title: "Test Photo"

